fixed spacing on contact

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ a{
     background-color:#44AB88;
     color:white;
 }
-.form-control{
+.form-width{
     width:50%;
 }
   @media(max-width:576px) {
@@ -72,5 +72,9 @@ a{
           margin-right:0;
           margin-bottom:0;       
       }
+      .form-width{
+          width:80%;
+      }
+      
   }
 
